# gettext-coverage

./: README.md  gettext-coverage.desktop  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml
.tx/: config
po/: gettext-coverage.pot  sv.mo  sv.po
src/gettext_coverage/: main.py
