[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gettext-coverage"
version = "0.1.3"
description = "GTK4 app showing translation coverage per package in a distribution"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
dependencies = ["PyGObject>=3.42"]

[project.scripts]
gettext-coverage = "gettext_coverage.main:main"

[tool.setuptools.packages.find]
where = ["src"]
